[tool.poetry]
name = "autobook-backend"
version = "1.0.0"
description = "Backend service for autobook application"
authors = ["Alvaro Merino Gonzalo"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
